# ChangeLog for sys-apps/coreutils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.256 2009/07/06 22:33:58 vapier Exp $

  06 Jul 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.4.ebuild:
  Auto delete /bin/dircolors if it is from early coreutils #224823 by Stefan
  de Konink.

  16 May 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.1.ebuild,
  coreutils-7.2.ebuild, coreutils-7.4.ebuild:
  Allow /dev/loop when running mount #269758 by Nick Fortino.

*coreutils-7.4 (07 May 2009)

  07 May 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-7.4.ebuild:
  Version bump.

  27 Apr 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.1,
  coreutils-7.2:
  Control gmp support via USE=gmp #267226 by Raúl Porcel.

  18 Apr 2009; Raúl Porcel <armin76@gentoo.org> coreutils-7.1.ebuild:
  arm/ia64/sh/sparc stable wrt #265614

  18 Apr 2009; Markus Meier <maekke@gentoo.org> coreutils-7.1:
  amd64/x86 stable, bug #265614

  12 Apr 2009; Brent Baude <ranger@gentoo.org> coreutils-7.1.ebuild:
  stable ppc64, bug 265614

  12 Apr 2009; Jeroen Roovers <jer@gentoo.org> coreutils-7.1.ebuild:
  Stable for HPPA (bug #265614).

  12 Apr 2009; Tobias Klausmann <klausman@gentoo.org> coreutils-7.1.ebuild:
  Stable on alpha, bug #265614

  12 Apr 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.1.ebuild,
  coreutils-7.2.ebuild:
  Allow mtab to be writable when running tests with mount #265725 by Nick
  Fortino.

  11 Apr 2009; nixnut <nixnut@gentoo.org> coreutils-7.1.ebuild:
  ppc stable #265614

  02 Apr 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.2.ebuild:
  Add fix from upstream for mv/i-3 test failure #264455 by Ryan Hill.

*coreutils-7.2 (31 Mar 2009)

  31 Mar 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-7.2.ebuild:
  Version bump.

  12 Mar 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.1.ebuild:
  Fix some test failures #259876 by Ryan Hill.
