@@ -18,7 +18,7 @@ DIST coreutils-7.2-patches-2.tar.lzma 7672 RMD160 a3e6fa01876f0087a9f4a3a74140d2
 DIST coreutils-7.2.tar.gz 9664198 RMD160 fbe573b70bafd5d482e519383c0b86aaaa48a665 SHA1 76b10f5b8cfab62d549c3dd9647425887e5ea238 SHA256 dd77bfec92e5a3ad48abd8a5bda3f8d40149c4e24744e4173abc3cc6a731fdb2
 DIST coreutils-7.4-patches-1.tar.lzma 7658 RMD160 b15e0775320e378631fa683301fb311efc5eaa16 SHA1 fc9fd5622de13a1441c9df8f4839088f06f3051e SHA256 7bdcffc0c4a3d95f9947b06a0e911787ea71d511bce79586a1a60bac037f37b7
 DIST coreutils-7.4.tar.gz 9708910 RMD160 a7f53f50154e8473d1d859468c8e02fa85c3c6bb SHA1 cfb399b1d121abde8c1b68b2651a645b7170547f SHA256 613c57d0df3616c2684a1e6a59259439b72dbc5eea4b90ac16bde714fefb7c83
-EBUILD coreutils-7.2-r00.1.ebuild 5152 RMD160 cbab191c4902609979591e10b18b4debbbdef707 SHA1 41c915a8023c3f4297e55751808d8458ccde764a SHA256 37c8009b78e91c56acc9ed724a6389a8498f5a635a5028ef9ec0574ec30a1630
-EBUILD coreutils-7.4.ebuild 5529 RMD160 14e27c360d83b602aa888e5ed4866b150d9981c3 SHA1 86cfd1feabd9d092030142c1a9253202a3b2c168 SHA256 b0a77393e10489c6fec6aa31681fec21653bf7f01e43c74bb7a05a67abed99e5
-MISC ChangeLog 38344 RMD160 6d29949ce3aa55f2a2ff4838f87c3afcf04268bc SHA1 82c0ae04379fafa866eb6d63b8c0d82a0d5e3c29 SHA256 bb1526033ccc0dcb9d1678784d2dd51845921bff800b4e67ff6ae734fe05aafc
+EBUILD coreutils-7.2-r00.1.ebuild 5177 RMD160 54c4286b4027c913d5b8a8b1b4ded19b053d097d SHA1 c753b7cbe4006399c0801770d0ed18a8e7c245c6 SHA256 d7163a71c76a63688079857b65490d6f6afb777d73572927a3a368f159505f40
+EBUILD coreutils-7.4.ebuild 5554 RMD160 7b620b9426aef3f17bb6d43d824b8a529671cbc4 SHA1 18b29eeed7272d666126f75c05a937fac7b24cfa SHA256 78c91865b856b52e0d5dc76801b99bd24149e690f14f33dcb658e37bb21b844a
+MISC ChangeLog 38499 RMD160 16d867a2b6248c41ba7363e596132977630747ef SHA1 5f9229dfb8eea792b530ca2a5c30e7fea1c63413 SHA256 9b4b4649f785ccaa492571244a8a0b21644586fe654eb81086e41da571bd4734
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
