@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/coreutils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.256 2009/07/06 22:33:58 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.257 2009/08/16 18:37:57 vapier Exp $
+
+  16 Aug 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.1.ebuild,
+  coreutils-7.2.ebuild, coreutils-7.4.ebuild:
+  Depend on xz-utils or lzma-utils.
 
   06 Jul 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.4.ebuild:
   Auto delete /bin/dircolors if it is from early coreutils #224823 by Stefan
